@@ -1,29 +1,5 @@
 package com.github.hannotify.patternmatching.musicstore_ea;
 
-/*
-# Guarded patterns & Deconstruction demo
- In this demo we use jshell to use early-access features of Java SDK which are not supported by IntelliJ.
-
- 1. sdk use java 19.ea.29-open
- 2. jshell --enable-preview
- 3. Declare (by copying) the objects below
-
-public enum GuitarType {
-    CLASSICAL,
-    WESTERN,
-    TELECASTER,
-    STRATOCASTER,
-    LES_PAUL,
-    GIBSON_ES335
-}
-
-public record Guitar(String name, GuitarType guitarType, boolean inTune) {}
-public record Note(String note) {}
-public record Tuner(int pitchInHz, Note note) {}
-
-
-// Deconstruction demo with Nesting
-
 public class TunerApplier {
     static String apply(Tuner effect, Guitar guitar) {
         return switch(effect) {
@@ -33,7 +9,3 @@ public class TunerApplier {
         };
     }
 }
-
-TunerApplier.apply(new Tuner(600, new Note("A")), new Guitar("Peter", GuitarType.WESTERN, false));
-
- */
